Fix colors on dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
   --color-muted-foreground: var(--muted-foreground);
   --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
+  --color-warning: var(--warning);
+  --color-warning-foreground: var(--warning-foreground);
+  --color-success: var(--success);
+  --color-success-foreground: var(--success-foreground);
   --color-destructive: var(--destructive);
   --color-destructive-foreground: var(--destructive-foreground);
   --color-border: var(--border);
@@ -72,10 +76,10 @@
   --muted-foreground: oklch(32.04% 0.01 101.28);
   --accent: hsl(240 4.8% 95.9%);
   --accent-foreground: hsl(240 5.9% 10%);
-  --warning: hsl(45 100% 50%);
-  --warning-foreground: hsl(0 0% 98%);
-  --success: hsl(142 76% 31%);
-  --success-foreground: hsl(0 0% 98%);
+  --warning: oklch(84.08% 0.1725 84.2);
+  --warning-foreground: oklch(84.08% 0.0796 84.2);
+  --success: oklch(55.88% 0.1502 149.34);
+  --success-foreground: oklch(81.81% 0.153 149.34);
   --destructive: hsl(0 84.2% 60.2%);
   --destructive-foreground: hsl(0 0% 98%);
   --border: hsl(240 5.9% 90%);
@@ -104,10 +108,10 @@
     --muted-foreground: hsl(240 5% 64.9%);
     --accent: hsl(240 3.7% 15.9%);
     --accent-foreground: hsl(0 0% 98%);
-    --warning: hsl(45 100% 50%);
-    --warning-foreground: hsl(0 0% 98%);
-    --success: hsl(142 76% 31%);
-    --success-foreground: hsl(0 0% 98%);
+    --warning: oklch(84.08% 0.1725 84.2);
+    --warning-foreground: oklch(84.08% 0.0796 84.2);
+    --success: oklch(55.88% 0.1502 149.34);
+    --success-foreground: oklch(81.81% 0.153 149.34);
     --destructive: hsl(0 62.8% 30.6%);
     --destructive-foreground: hsl(0 0% 98%);
     --border: hsl(240 3.7% 15.9%);
